# nagata

./: 404.html  CONTRIBUTING.md  README.md  duties.py  index.html  mkdocs.yml  objects.inv  pyproject copy.toml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ISSUE_TEMPLATE/ISSUE_TEMPLATE/: bug_report.md
changelog/: index.html
code_of_conduct/: index.html
config/: ruff.toml
contributing/: index.html
credits/: index.html
design/: index.html
license/: index.html
nagata/: __init__.py  base.py  core.py  formats.py  lazy.py  transfer.py
recipes/: index.html
reference/SUMMARY/: index.html
reference/nagata/: index.html
reference/nagata/core/: index.html
reference/nagata/formats/: index.html
reference/nagata/lazy/: index.html
search/: search_index.json
src/nagata/: __init__.py  core.py
tests/: test_main.py  test_nagata.py
tests/dummy_folder/: dummy_module.py  excel_test_file.xlsx
